--- a/src/components/code/code-asm/pages/elem-firststeps.html
+++ b/src/components/code/code-asm/pages/elem-firststeps.html
@@ -6,7 +6,12 @@
   <h2>Содержание</h2>
 
   <p><a href="#links">links</a></p>
-  <p><a href="#about">about</a></p>
+  <p><a href="#t0">Обязательная теория. Часть 0. Цели и задачи</a></p>
+  <p><a href="#t1">Обязательная теория. Часть 1. Основные понятия</a></p>
+  <p><a href="#t2">Обязательная теория. Часть 2. Код и Данные</a></p>
+  <p><a href="#a0">MS-DOS и TASM 2.0. Часть 0. Программное обеспечение</a></p>
+  <p><a href="#a1">MS-DOS и TASM 2.0. Часть 1. Кратко об MS-DOS</a></p>
+  <p><a href="#soft1">Скачать софт для программирования</a></p>
   <p><a href="#install">install</a></p>
   <p><a href="#fasm64">fasm64</a></p>
   <p><a href="#pellesc">Pelles C</a></p>
@@ -26,10 +31,166 @@
 </article>
 
 
-<!-- about -->
+<!-- Обязательная теория. Часть 0. Цели и задачи -->
 <article class="article">
-  <div class="anchor" id="about"></div>
-  <h3>about</h3>
+  <div class="anchor" id="t0"></div>
+  <h3>Обязательная теория. Часть 0. Цели и задачи (2018.10.02)</h3>
+
+  <h4>Просто о сложном</h4>
+  <p>Информация излагается понятной для любого начинающего. Цель - показать, насколько просто научиться программировать самостоятельно при наличии времени и желания.</p>
+
+  <h4>Ассемблер с нуля — практический подход</h4>
+  <p>В качестве примеров будет рассмотрено написание конкретных простейших программ «хакерской» направленности, а также изучены основы крекинга (взлома программных защит), использования дизассемблированного кода в сторонних программах.</p>
+
+  <h4>Наш план действий</h4>
+  <ol>
+    <li>Суть программирования.</li>
+    <li>Понятие кода и данных на примере разработки простейших MS-DOS программы на Ассемблере с учётом возможностей простой, с точки зрения современности, операционной системы.</li>
+    <li>Программирование Windows приложений на ассемблере и Си.</li>
+    <li>Основы вирусологии — просто о сложном. Создание простейшего вируса и антивируса для Windows.</li>
+    <li>Основы крэкинга. Исследование программ.</li>
+    <li>Дизассемблирование — ассемблирование. Сложно ли «украсть» чужой код.</li>
+    <li>Применение ассемблера и Си для создания современных Windows приложений.</li>
+    <li>Итоги, выводы, применение полученных знаний и умений на практике.</li>
+  </ol>
+</article>
+
+
+<!-- Обязательная теория. Часть 1. Основные понятия -->
+<article class="article">
+  <div class="anchor" id="t1"></div>
+  <h3>Обязательная теория. Часть 1. Основные понятия (2018.10.08)</h3>
+
+  <h4>Изучать программирование начнём с теории.</h4>
+  <p>Для результативной работы начнём с теории: уясним и запомним задачи, решаемые с помощью создания кода, определение и основные структурные понятия программирования.</p>
+
+  <h4>Задачи программирования</h4>
+  <p>Программирование прежде всего предназначено для решения простой последовательности задач ввод информации в компьютер, обработка информации компьютером, вывод обработанной информации пользователю</p>
+
+  <h4>Определение программирования</h4>
+  <p>Машина понимает только язык цифр. Человеку более удобны понятные для него команды, отображаемые осмысленными словами, фразами, предложениями</p>
+  <p>С помощью совокупности программ так называемой «среды программирования» программа, написанная на человекопонятном языке преобразуется в машинный код и машинные данные.</p>
+
+  <h4>Основные структурные понятия программирования</h4>
+  <p>Программирование включает в себя две основные взаимозависимые друг от друга составляющие части:</p>
+  <ol>
+    <li>Код.</li>
+    <li>Данные.</li>
+  </ol>
+  <p>Код — совокупность указаний компьютеру обработать данные. Основная единица кода — функция.</p>
+  <p>Данные — это информация в любом объеме и виде. Основная единица данных — бит.</p>
+</article>
+
+
+<!-- Обязательная теория. Часть 2. Код и Данные -->
+<article class="article">
+  <div class="anchor" id="t2"></div>
+  <h3>Обязательная теория. Часть 2. Код и Данные (2018.10.09)</h3>
+
+  <h4>Конкретизируем основные понятия программирования</h4>
+  <p>Суть программирования — это эффективная работа с данными. Программирование — это совокупность двух не разрывных понятий — Кода и Данных.</p>
+
+  <h4>Данные.</h4>
+  <p>Данные представлены в следующем виде: переменные; константы.</p>
+  <p>Данные могут быть сгруппированы для удобства их использования и обработки на: структуры.</p>
+  <p>Разновидностями структур в современных языках программирования являются: перечисления; объединения; записи с битовыми полями; массивы; классы (в отличие от структуры, класс группирует и код, и данные).</p>
+  <p>Разновидностью массива является (так сложилось исторически и до сих пор актуально): нультерминированная строка.</p>
+  <p>Ключевым понятием, неотрывным от данных является: указатели.</p>
+
+  <h4>Код.</h4>
+  <p>Код представлен в виде: функции.</p>
+
+  <h4>Единство Кода и Данных</h4>
+  <p>Код и данные фактически представляют собой последовательности цифр. Таким образом, код можно рассматривать также как совокупность данных. Ведь любая функция — это для компьютера набор единиц и нулей</p>
+  <p>Байт — единица кода и данных</p>
+  <p>Бит — это единица информации. Так удобнее для машины. Компьютер не может напрямую работать с битом данных — только с байтом (8 бит — 256 вариантов значений).</p>
+
+  <h4>Приступаем к практике</h4>
+  <p>Программирование плотно связано с операционными системами. Начнём рассматривать программирование с написания программы под древнюю операционку MS-DOS.</p>
+</article>
+
+
+<!-- MS-DOS и TASM 2.0. Часть 0. Программное обеспечение -->
+<article class="article">
+  <div class="anchor" id="a0"></div>
+  <h3>MS-DOS и TASM 2.0. Часть 0. Программное обеспечение (2018.10.14)</h3>
+
+  <h4>Выбираем ассемблер для DOS</h4>
+  <p>Изучать практическое программирование мы начнём с написания простейших программ для древней 16 битной  операционной системы MS-DOS. В этом нам поможет ассемблер для DOS — TASM (Turbo Assembler) от Borland. Для того времени — это самый популярный ассемблер с прекрасным функционалом и возможностями, в состав которого входит прекрасный для того времени отладчик TD (Turbo Debuger).</p>
+
+  <h4>DOSBox или чистый DOS</h4>
+  <p>Среда — операционная система MS-DOS. Мы обойдёмся виртуальной машиной, приспособленной для современного пользователя — DOSBox.</p>
+
+  <h4>Необходимое программное обеспечение.</h4>
+  <p>Основной софт, который нам понадобиться, чтобы бегло изучить ассемблер для DOS:</p>
+  <ul>
+    <li>TASM 2.0 (Turbo Assembler ver. 2.0)- 16 битный ассемблер для DOS фирмы Borland;</li>
+    <li>TC 2.0 (Turbo C 2.0) — среда программирования и компилятор Си фирмы Borland;</li>
+    <li>TD (Turbo Debugger) — отладчик фирмы Borland;</li>
+    <li>SR (Sourcer) — популярный дизассемблер для DOS;</li>
+    <li>IDA (Interractive Disassembler — DOS версия) — ещё один популярный дизассемблер;</li>
+    <li>T-HELP — перечень прерываний (функций) MS-DOS в удобном виде.</li>
+  </ul>
+  <p>Вспомогательные программы:</p>
+  <ul>
+    <li>Hiew — очень популярный в свое время в среде программистов и хакеров редактор DOS с расширенными возможностями. Позволяет дизассемблировать код налету, вносить изменения и снова ассемблировать изменённый файл;</li>
+    <li>TASMED — удобная среда программирования на ассемблере для DOS.</li>
+  </ul>
+
+  <h4>Устанавливаем пакет программ</h4>
+  <p>Скачиваем архив DOS-1.rar и разархивируем. Должна появиться папка DOS, а в ней три директории: C, D, DOSBox. Заходим в пмпку DOSBox и кликаем на DOSBox.exe. Запустится эмулятор и автоматически — Norton Comander 5.0. Все необходимые программы установлены и настроены для наших целей. Директории C, D смонтированы как диски C:\, D:\ для удобства работы. На указанных дисках вы найдёте множество дополнительных утилит для удобства программирования в системе MS-DOS.</p>
+</article>
+
+
+<!-- Скачать софт для программирования -->
+<article class="article">
+  <div class="anchor" id="soft1"></div>
+  <h3>Скачать софт для программирования (2018.10.14)</h3>
+
+  <h4>Программное обеспечение для DOS</h4>
+  <p>Операционная система MS-DOS широко используется до сих пор в целях обучения программированию и для запуска старых компьютерных игр. MS-DOS можно установить как на старом, так и на современном компьютере. Однако, чаще всего используют виртуальную машину DOSBox — практически не требующую установки и настройки.</p>
+
+  <p>DOS-1.rar — пакет всего необходимого для программирования на ассемблере и Си в MS-DOS. Архив необходимо распаковать в отдельную папку (с названием, например, «DOS»). В папке должно быть три директории: C, D, DOSBox. В директории DOSBox запускаем DOSBox.exe и можно работать! Перечень программ: TASM 2.0 (Turbo Assembler ver. 2.0), TC 2.0 (Turbo C 2.0), TCPP 3.0 (Turbo C++ 3.0), TD (Turbo Debugger), SR (Sourcer), CV (CodeView), IDA (Interractive Disassembler — DOS версия), T-HELP, Hiew,  TASMED, DRWEBER, LEXICON, PAINT, NU (Norton Utils for DOS), NC 5.0 (Norton Commander 5.0). В папке WORK находятся исходники программ, рассмотренных в рубрике статей Ассемблер для DOS.</p>
+
+  <h4>Программное обеспечение для Window.</h4>
+  <ol>
+    <li>FASM64.exe — пакет всего необходимого для программирования на ассемблере в Windows XP, 7, 8, 10, 11 (x86, x64). В сборку включены следующие программы.
+    <p>Assemblers: fasm (x86, x64), masm32 (x86).</p>
+    <p>Development environment: RadAsm 2.</p>
+    <p>Debuger: xdbg (x86, x64).</p>
+    <p>Utils: apimonitor (x86, x64), Depends, Hiew.v8.10 [Gun-Ryo Repack], Window Scanner, Process Monitor, Registry Workshop, WinHex, calc, winhlp32 insaller for Win 8, 10.</p>
+    <p>Всё настроено для установки одним кликом в любую директорию. В процессе установки можно выбрать ассемблер для RadAsm 2 по-умолчанию. Впрочем, выбрать ассемблер всегда можно при создании нового проекта.</p>
+    <p>RadAsm 2 — лучшая среда разработки для ассемблерных windows приложений. Настроить Microsoft Visual Studio Code под анологичный функционал и удобство пока не получается, MS VS также не дотягивает.</p>
+    <p>Pass: assembler-code.com</p>
+    </li>
+    <li>Pelles C — это бесплатная интегрированная среда разработки и компилятор для языка C, работающая на операционных системах Microsoft Windows.
+    <p>Pelles C включает в себя мощный компилятор, который поддерживает стандарт C и позволяет создавать высокопроизводительные приложения. Компилятор gcc. Поддерживает только С (С++ не поддерживает).</p>
+    <p>Среда разработки предоставляет различные инструменты, такие как редактор ресурсов, инструмент для подписывания кода и интегрированный установщик, что делает процесс разработки более удобным и эффективным</p>
+    <p>Pelles C позволяет разрабатывать приложения как для настольных ПК, так и для мобильных устройств на базе Windows.</p>
+    <p>В архиве версии для Win98, WinXP, Win7(x86-x64), Win8-11 (setup.exe — поддержка x86-x64, ver. 12.00.2 — март 2024г.).</p>
+    </li>
+  </ol>
+</article>
+
+
+<!-- MS-DOS и TASM 2.0. Часть 1. Кратко об MS-DOS -->
+<article class="article">
+  <div class="anchor" id="a1"></div>
+  <h3>MS-DOS и TASM 2.0. Часть 1. Кратко об MS-DOS (2018.10.15)</h3>
+
+  <h4>Операционная система MS-DOS — необходимый минимум</h4>
+  <p>Программирование на языке низкого уровня подразумевает знание операционной системы, для которой пишутся приложения. Операционная система — это основная программа, которая как минимум должна быть запущена на машине.</p>
+
+  <h4>Файлы, папки, диски.</h4>
+  <p>Операционная система MS-DOS работает с файлами, папками (по сути — подвиды файлов), дисками.</p>
+  <p>Файлы делятся на виды:</p>
+  <ol>
+    <li>Исполняемые файлы.</li>
+    <li>Файлы данных.</li>
+  </ol>
+
+  <h4>Память</h4>
+
 
 </article>
 
